Upnp/Api/C/CpLinnCoUkDelay1.h


DllExport THandle CpProxyLinnCoUkDelay1Create(CpDeviceC aDevice);
DllExport void CpProxyLinnCoUkDelay1Destroy(THandle aHandle);
DllExport void CpProxyLinnCoUkDelay1SyncPresetXml(THandle aHandle, char** aaPresetXml);
DllExport void CpProxyLinnCoUkDelay1BeginPresetXml(THandle aHandle, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkDelay1EndPresetXml(THandle aHandle, ZappHandleAsync aAsync, char** aaPresetXml);
DllExport void CpProxyLinnCoUkDelay1SyncPresetIndex(THandle aHandle, uint32_t* aaIndex);
DllExport void CpProxyLinnCoUkDelay1BeginPresetIndex(THandle aHandle, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkDelay1EndPresetIndex(THandle aHandle, ZappHandleAsync aAsync, uint32_t* aaIndex);
DllExport void CpProxyLinnCoUkDelay1SyncSetPresetIndex(THandle aHandle, uint32_t aaIndex);
DllExport void CpProxyLinnCoUkDelay1BeginSetPresetIndex(THandle aHandle, uint32_t aaIndex, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkDelay1EndSetPresetIndex(THandle aHandle, ZappHandleAsync aAsync);
DllExport void CpProxyLinnCoUkDelay1SyncSetPresetDelay(THandle aHandle, uint32_t aaIndex, uint32_t aaDelay);
DllExport void CpProxyLinnCoUkDelay1BeginSetPresetDelay(THandle aHandle, uint32_t aaIndex, uint32_t aaDelay, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkDelay1EndSetPresetDelay(THandle aHandle, ZappHandleAsync aAsync);
DllExport void CpProxyLinnCoUkDelay1SyncSetPresetVisible(THandle aHandle, uint32_t aaIndex, uint32_t aaVisible);
DllExport void CpProxyLinnCoUkDelay1BeginSetPresetVisible(THandle aHandle, uint32_t aaIndex, uint32_t aaVisible, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkDelay1EndSetPresetVisible(THandle aHandle, ZappHandleAsync aAsync);
DllExport void CpProxyLinnCoUkDelay1SyncSetPresetName(THandle aHandle, uint32_t aaIndex, const char* aaName);
DllExport void CpProxyLinnCoUkDelay1BeginSetPresetName(THandle aHandle, uint32_t aaIndex, const char* aaName, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkDelay1EndSetPresetName(THandle aHandle, ZappHandleAsync aAsync);
DllExport void CpProxyLinnCoUkDelay1SyncDelayMinimum(THandle aHandle, uint32_t* aaDelay);
DllExport void CpProxyLinnCoUkDelay1BeginDelayMinimum(THandle aHandle, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkDelay1EndDelayMinimum(THandle aHandle, ZappHandleAsync aAsync, uint32_t* aaDelay);
DllExport void CpProxyLinnCoUkDelay1SyncDelayMaximum(THandle aHandle, uint32_t* aaDelay);
DllExport void CpProxyLinnCoUkDelay1BeginDelayMaximum(THandle aHandle, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkDelay1EndDelayMaximum(THandle aHandle, ZappHandleAsync aAsync, uint32_t* aaDelay);
DllExport void CpProxyLinnCoUkDelay1SyncPresetCount(THandle aHandle, uint32_t* aaCount);
DllExport void CpProxyLinnCoUkDelay1BeginPresetCount(THandle aHandle, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkDelay1EndPresetCount(THandle aHandle, ZappHandleAsync aAsync, uint32_t* aaCount);
DllExport void CpProxyLinnCoUkDelay1SetPropertyPresetXmlChanged(THandle aHandle, ZappCallback aCallback, void* aPtr);
DllExport void CpProxyLinnCoUkDelay1SetPropertyPresetIndexChanged(THandle aHandle, ZappCallback aCallback, void* aPtr);
DllExport void CpProxyLinnCoUkDelay1PropertyPresetXml(THandle aHandle, char** aPresetXml);
DllExport void CpProxyLinnCoUkDelay1PropertyPresetIndex(THandle aHandle, uint32_t* aPresetIndex);